--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ p {
     z-index: -1;
   }
 .btn{
-  margin-right: 20px;
+  margin-right: 10px;
   margin-top: 5px;
   font-weight: 900;
 }
@@ -192,16 +192,23 @@ p {
     text-decoration: none;
     background-color: #ffffff;
   }
-
+  ul.menu2-left{
+  text-transform: uppercase;
+}
   ul.menu2-left>.list-group-item {
     background-color: #ffffff !important;
     padding-top: 0;
     padding-bottom: 0;
-    font-size: 14px !important;
+    font-size: 13px !important;
+    font-weight: 800 !important;
   }
-  ul.menu2-left{
-  text-transform: uppercase;
-}
+  ul.menu2-left>.list-group-item>a:hover {
+    color: #001970 !important;
+    text-decoration: none;
+    background-color: #ffffff;
+  }
+
+
   .imgcarrera {
     width: 354px;
     height: 219px;
@@ -298,14 +305,14 @@ p {
         <li class="list-group-item"><a href="https://www.pucmm.edu.do/orientacion">Departamento de Orientación</a></li>
         <li class="list-group-item"><a href="https://www.pucmm.edu.do/admisiones/conexiones-globales">Conexiones Globales</a></li>
       </ul>
-      <a type="button" class="btn pucmm-btn-adm text-uppercase" href="https://www.pucmm.edu.do/admisiones/solicitud-admision">Formulario de Admisión</a>
+      <a type="button" class="btn pucmm-btn-adm text-uppercase" href="https://www.pucmm.edu.do/admisiones/solicitud-admision">Formulario de Admisión »</a>
       <hr class="hr-menu">
       <ul class="list-group menu2-left">
-        <li class="list-group-item"><a href="https://www.pucmm.edu.do/academico/oferta-grado">Oferta académica</a></li>
-        <li class="list-group-item"><a href="https://humanidades.pucmm.edu.do/">Ciencias sociales, humanidades y artes</a></li>
-        <li class="list-group-item"><a href="https://economicas.pucmm.edu.do/">Ciencias económicas y administrativas</a></li>
-        <li class="list-group-item"><a href="https://www.pucmm.edu.do/ingenierias">Ciencias e ingeniería</a></li>
-        <li class="list-group-item"><a href="https://www.pucmm.edu.do/salud">Ciencias de la salud</a></li>
+        <li class="list-group-item"><a href="https://www.pucmm.edu.do/academico/oferta-grado">Oferta académica »</a></li>
+        <li class="list-group-item"><a href="https://humanidades.pucmm.edu.do/">Ciencias sociales, humanidades y artes »</a></li>
+        <li class="list-group-item"><a href="https://economicas.pucmm.edu.do/">Ciencias económicas y administrativas »</a></li>
+        <li class="list-group-item"><a href="https://www.pucmm.edu.do/ingenierias">Ciencias e ingeniería »</a></li>
+        <li class="list-group-item"><a href="https://www.pucmm.edu.do/salud">Ciencias de la salud »</a></li>
       </ul>
       <hr class="hr-menu">
     </div>
@@ -350,7 +357,7 @@ p {
               Las personas egresadas de Comunicación Corporativa egresadas de la PUCMM se especializan en el diseño,
               gestión y dirección de proyectos y producciones de comunicación manteniendo los principios éticos que
               distinguen a los y las profesionales de la comunicación.</p>
-              <a type="button" class="btn pucmm-btn-primary text-uppercase" href="pensum-com-corporativa.pdf">Ver pensum</a>
+              <a type="button" class="btn pucmm-btn-primary text-uppercase" href="pensum-com-corporativa.pdf">Ver pénsum »</a>
 <br>
 <br>      
               <div class="embed-responsive embed-responsive-16by9 center-block">
@@ -422,7 +429,7 @@ p {
               propiamente audiovisuales (radio, televisión y cine), así como editoriales y digitales. Así mismo,
               abordarán con sentido creativo, integral, y ético el proceso de comunicación y la producción de
               contenidos.</p>
-              <a type="button" class="btn pucmm-btn-primary text-uppercase" href="pensum-com-audiovisual-artes-cinematograficas.pdf">Ver pensum</a>
+              <a type="button" class="btn pucmm-btn-primary text-uppercase" href="pensum-com-audiovisual-artes-cinematograficas.pdf">Ver pénsum »</a>
 <br>
 <br> 
               <div class="embed-responsive embed-responsive-16by9 center-block">
