--- a/index.html
+++ b/index.html
@@ -48,11 +48,17 @@
     line-height: 200% !important;
     color: rgba(0, 0, 0, 0.7) !important;
     padding: 15px 20px;
+    font-weight: 600 !important;
   }
   .list-group-item a {
-    color: rgba(0, 0, 0, 0.7) !important;
+    color:#001970 !important;
     text-decoration: none !important;
+   
   }
+  .menul-lef > .list-group-item:first-child {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
   .menul-lef>.list-group-item {border-bottom: 2px solid #ddd !important;}
   .comcar {
     border-bottom: 3px solid #001970;
@@ -177,11 +183,11 @@
     background-color: #ffffff !important;
     padding-top: 0;
     padding-bottom: 0;
-    font-size: 13px !important;
-    font-weight: 800 !important;
+    font-size: 12px !important;
+    line-height: 250% !important;
   }
   ul.menu2-left>.list-group-item>a:hover {
-    color: #001970 !important;
+    color: rgba(0, 0, 0, 0.7) !important;
     text-decoration: none;
     background-color: #ffffff;
   }
@@ -272,8 +278,7 @@
           href="https://www.pucmm.edu.do/admisiones/solicitud-admision">Formulario de Admisión »</a>
         <hr class="hr-menu">
         <ul class="list-group menu2-left">
-          <li class="list-group-item"><a href="https://www.pucmm.edu.do/academico/oferta-grado">Oferta académica »</a>
-          </li>
+          <li class="list-group-item">Oferta académica</li>
           <li class="list-group-item"><a href="https://humanidades.pucmm.edu.do/">Ciencias sociales, humanidades y artes
               »</a></li>
           <li class="list-group-item"><a href="https://economicas.pucmm.edu.do/">Ciencias económicas y administrativas
@@ -282,6 +287,9 @@
           <li class="list-group-item"><a href="https://www.pucmm.edu.do/salud">Ciencias de la salud »</a></li>
         </ul>
         <hr class="hr-menu">
+        <a href="http://www.instagram.com/expresatepucmm" target="_blank">
+          <i class="fab fa-instagram-square"></i> @expresatepucmm </a>
+          <hr class="hr-menu">
       </div>
       <div class="col-md-8">
         <div>
@@ -504,9 +512,6 @@
               </ul>
             </div>
             <div id="menu4" class="tab-pane fade">
-              <!-- <a href="http://www.instagram.com/expresatepucmm" target="_blank">
-                <i class="fab fa-instagram-square"></i> @expresatepucmm </a> -->
-
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-md-12">
