--- a/index.html
+++ b/index.html
@@ -209,9 +209,12 @@
     background-color: #e5e8f1;
     justify-content: center;
   }
-  .acreditacion {
+  .pasantia {
     padding-top: 60px;
     padding-bottom: 60px;
+  }
+  .pasantia .carousel-indicators{
+    bottom: -35px;
   }
   .pcajas {
     padding-top: 80px;
@@ -229,7 +232,7 @@
   .carousel-indicators .active {background-color: #001970;}
   .carousel-bg {background: linear-gradient(90deg, #fbff33 31%, #e5e8f1 30%);}
   .carousel-img>img {width: 300px;}
-  .carousel-indicators {width: 53%;bottom: 0px !important;}
+  .carousel-bg .carousel-indicators {width: 53%;bottom: 0px !important;}
   .carousel-texto {color: #001970;}
   .carousel-texto>p>span {
     font-size: 16px;
@@ -584,19 +587,48 @@
       </div>
     </div>
   </div>
-  <div class="container acreditacion">
+  <div class="container-fluid pasantia">
     <h2 class="text-center">Pasantía</h2>
     <div class="row">
       <div class="col-md-12">
-        <ul class="columns" data-columns="3">
-          <li>Diario Libre</li>
-          <li>Listín Diario</li>
-          <li>Teleradio América</li>
-          <li>CDN</li>
-          <li>Newlink</li>
-          <li>Mediáticos Consultores de Comunicación</li>
-          <li>Caribe Soy (Revista de España con pasantía remota)</li>
-        </ul>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+          </ol>
+        
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active text-center">
+              <div class="col-md-6"><img src="DL.jpg" alt=""></div>
+              <div class="col-md-6"><img src="CDN.jpg" alt=""></div>
+            </div>
+            <div class="item text-center">
+              <div class="col-md-6"><img src="LD.jpg" alt=""></div>
+              <div class="col-md-6"><img src="mediaticos.jpg" alt=""></div>
+            </div>
+            <div class="item text-center">
+              <div class="col-md-6"><img src="NLINK.jpg" alt=""></div>
+              <div class="col-md-6"><img src="SC.jpg" alt=""></div>
+            </div>
+            <div class="item text-center">
+                <div class="col-md-12"><img src="TRA.jpg" alt=""></div>
+            </div>
+          </div>
+        
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
       </div>
     </div>
   </div>
