--- a/index.html
+++ b/index.html
@@ -750,7 +750,9 @@
   </div>
   <section class="pcajas">
     <div class="container ">
-      <div class="row vertical-align">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row vertical-align">
         <div class="col-md-6">
           <h5>MOVILIDAD ESTUDIANTIL</h5>
           <h2 style="margin-bottom: 25px;">Experiencia internacional</h2>
@@ -763,9 +765,12 @@
           <a class="btn pucmm-btn-primary text-uppercase"
             href="https://www.pucmm.edu.do/movilidad-estudiantil/estudiantes-pucmm/programas">Ver programa</a>
         </div>
-        <div class="col-md-6"> <img class="img-fluid" src="chica-internacional.png" alt=""> </div>
-      </div>
-    </div>
+				<div class="col-md-6"> <img class="img-fluid" src="chica-internacional.png" alt=""> 
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
   </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
