--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
                 <div class="row">
                     <div class="col-md-4">
                         <ul class="list-group menul-left">
-                            <li class="list-group-item"><a href="">Admisiones</a></li>
-                            <li class="list-group-item"><a href="">Requisitos</a></li>
-                            <li class="list-group-item"><a href="">Prueba de Admisión</a></li>
-                            <li class="list-group-item"><a href="">Contacto de Admisiones</a></li>
-                            <li class="list-group-item"><a href="">Decanato de Estudiantes</a></li>
-                            <li class="list-group-item"><a href="">Departamento de Orientación</a></li>
-                            <li class="list-group-item"><a href="">Conexiones Globales</a></li>
+                          <li class="list-group-item"><a href="https://www.pucmm.edu.do/admisiones">Admisiones</a></li>
+                          <li class="list-group-item"><a href="https://www.pucmm.edu.do/admisiones/aplicar-grado">Requisitos</a></li>
+                          <li class="list-group-item"><a href="https://www.pucmm.edu.do/admisiones/pruebas-admision">Prueba de Admisión</a></li>
+                          <li class="list-group-item"><a href="https://www.pucmm.edu.do/admisiones/contactos">Contacto de Admisiones</a></li>
+                          <li class="list-group-item"><a href="https://www.pucmm.edu.do/decanato">Decanato de Estudiantes</a></li>
+                          <li class="list-group-item"><a href="https://www.pucmm.edu.do/orientacion">Departamento de Orientación</a></li>
+                          <li class="list-group-item"><a href="https://www.pucmm.edu.do/admisiones/conexiones-globales">Conexiones Globales</a></li>
                         </ul>
-                        <a type="button" href="" class="btn pucmm-btn-adm text-uppercase">Formulario de Admisión »</a>
+                        <a type="button" href="https://www.pucmm.edu.do/admisiones/solicitud-admision" class="btn pucmm-btn-adm text-uppercase">Formulario de Admisión »</a>
                         <hr class="hr-menu">
                         <ul class="list-group menu2-left">
                             <li class="list-group-item" style="color: rgba(0, 0, 0, 0.7);">Oferta académica</li>
-                            <li class="list-group-item"><a href="">Ciencias sociales, humanidades y artes »</a></li>
-                            <li class="list-group-item"><a href="">Ciencias económicas y administrativas »</a></li>
-                            <li class="list-group-item"><a href="">Ciencias e ingeniería »</a></li>
-                            <li class="list-group-item"><a href="">Ciencias de la salud »</a></li>
+                            <li class="list-group-item"><a href="https://humanidades.pucmm.edu.do/">Ciencias sociales, humanidades y artes »</a></li>
+                            <li class="list-group-item"><a href="https://economicas.pucmm.edu.do/">Ciencias económicas y administrativas »</a></li>
+                            <li class="list-group-item"><a href="https://www.pucmm.edu.do/ingenierias">Ciencias e ingeniería »</a></li>
+                            <li class="list-group-item"><a href="https://www.pucmm.edu.do/salud">Ciencias de la salud »</a></li>
                         </ul>
                         <hr>
                     </div>
@@ -552,8 +552,8 @@
                         <h5>MOVILIDAD ESTUDIANTIL</h5>
                         <h2>Experiencia internacional</h2>
                         <p>En un mundo donde la preparación y las experiencias personales han adquirido relevancia para insertarse en un mundo laboral cada vez más global, es importante participar en actividades, programas y vivencias internacionales que ayuden a desarrollar</p>
-                            <a type="button" href="" class="btn pucmm-btn-primary" style="margin-bottom: 15px;">Conoce más</a>
-                            <a type="button" href="" class="btn pucmm-btn-warning" style="margin-bottom: 15px;">Ver programa</a>
+                            <a type="button" href="https://www.pucmm.edu.do/movilidad-estudiantil/sobre/oficina-estudiantes-internacionales" class="btn pucmm-btn-primary" style="margin-bottom: 15px;">Conoce más</a>
+                            <a type="button" href="https://www.pucmm.edu.do/movilidad-estudiantil/estudiantes-pucmm/programas" class="btn pucmm-btn-warning" style="margin-bottom: 15px;">Ver programa</a>
                     </div>
                     <div class="col-md-6">
                         <img class="img-responsive" src="chica-internacional.png" alt="">
