--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                             <h3>Licenciaturas en</h3>
                             <h1>Comunicación Social</h1>
                             <p>Al comunicarnos proyectamos quienes somos y que queremos ser.<br>¡Vive la experiencia!</p>
-                            <a type="button" href="" class="btn pucmm-btn-warning text-uppercase">Admisiones</a>
-                            <a type="button" href="" class="btn pucmm-btn-white text-uppercase">Aplicar</a>
+                            <a type="button" href="https://www.pucmm.edu.do/admisiones" class="btn pucmm-btn-warning text-uppercase">Admisiones</a>
+                            <a type="button" href="https://www.pucmm.edu.do/admisiones/aplicar-grado" class="btn pucmm-btn-white text-uppercase">Aplicar</a>
                         </div>
                     </div>
                 </div>
