--- a/index.html
+++ b/index.html
@@ -373,11 +373,9 @@
                       <div class="carousel-inner">
                           <div class="item active">
                               <div class="row">
-                                  <div class="col-xs-4"><a href="#" class="thumbnail"><img src="DL.jpg" alt="Image" class="img-responsive"></a>
+                                  <div class="col-xs-6"><a href="#" class="thumbnail"><img src="DL.jpg" alt="Image" class="img-responsive"></a>
                                   </div>
-                                  <div class="col-xs-4"><a href="#" class="thumbnail"><img src="CDN.JPG" alt="Image" class="img-responsive"></a>
-                                  </div>
-                                  <div class="col-xs-4"><a href="#" class="thumbnail"><img src="LD.jpg" alt="Image" class="img-responsive"></a>
+                                  <div class="col-xs-6"><a href="#" class="thumbnail"><img src="CDN.JPG" alt="Image" class="img-responsive"></a>
                                   </div>
                               </div>
                               <!--/row-->
@@ -385,11 +383,9 @@
                           <!--/item-->
                           <div class="item">
                               <div class="row">
-                                  <div class="col-xs-4"><a href="#x" class="thumbnail"><img src="NLINK.jpg" alt="Image" class="img-responsive"></a>
+                                  <div class="col-xs-6"><a href="#x" class="thumbnail"><img src="NLINK.jpg" alt="Image" class="img-responsive"></a>
                                   </div>
-                                  <div class="col-xs-4"><a href="#x" class="thumbnail"><img src="mediaticos.jpg" alt="Image" class="img-responsive"></a>
-                                  </div>
-                                  <div class="col-xs-4"><a href="#x" class="thumbnail"><img src="sc.jpg" alt="Image" class="img-responsive"></a>
+                                  <div class="col-xs-6"><a href="#x" class="thumbnail"><img src="mediaticos.jpg" alt="Image" class="img-responsive"></a>
                                   </div>
                               </div>
                               <!--/row-->
@@ -397,12 +393,22 @@
                           <!--/item-->
                           <div class="item">
                               <div class="row">
-                                  <div class="col-xs-4"><a href="#x" class="thumbnail"><img src="TRA.jpg" alt="Image" class="img-responsive"></a>
+                                  <div class="col-xs-6"><a href="#x" class="thumbnail"><img src="TRA.jpg" alt="Image" class="img-responsive"></a>
+                                  </div>
+                                  <div class="col-xs-6"><a href="#" class="thumbnail"><img src="LD.jpg" alt="Image" class="img-responsive"></a>
                                   </div>
                               </div>
                               <!--/row-->
                           </div>
                           <!--/item-->
+                          <div class="item">
+                            <div class="row">
+                              <div class="col-xs-12"><a href="#x" class="thumbnail"><img src="sc.jpg" alt="Image" class="img-responsive"></a>
+                              </div>
+                            </div>
+                            <!--/row-->
+                        </div>
+                        <!--/item-->
                       </div>
                       <!--/carousel-inner--> 
                       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
