--- a/index.html
+++ b/index.html
@@ -344,11 +344,11 @@
             <div class="col-md-12">
                 <div class="row vertical-align">
                     <div class="col-md-6">
-                        <div class="embed-responsive embed-responsive-16by9"  style="margin-bottom: 15px;">
+                        <div class="embed-responsive embed-responsive-16by9"  style="margin-bottom: 15px; z-index: 1;">
                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/H0LVMgCn2ws"></iframe>
                       </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 back-mov">
                         <script type="text/javascript" defer src="https://form.123formbuilder.com/embed/5852748.js" data-role="form"
                         data-default-width="650px"></script>
                     </div>
@@ -433,7 +433,6 @@
 
 <!-- egresados carousel -->
 <section>
-
   <div class="container-fluid pcajas carousel-bg">
     <div class='row'>
       <div class='col-md-12'>
