--- a/index.html
+++ b/index.html
@@ -383,9 +383,9 @@
                           <!--/item-->
                           <div class="item">
                               <div class="row">
-                                  <div class="col-xs-6"><a href="#x" class="thumbnail"><img src="NLINK.jpg" alt="Image" class="img-responsive"></a>
+                                  <div class="col-xs-6"><a href="#" class="thumbnail"><img src="NLINK.jpg" alt="Image" class="img-responsive"></a>
                                   </div>
-                                  <div class="col-xs-6"><a href="#x" class="thumbnail"><img src="mediaticos.jpg" alt="Image" class="img-responsive"></a>
+                                  <div class="col-xs-6"><a href="#" class="thumbnail"><img src="mediaticos.jpg" alt="Image" class="img-responsive"></a>
                                   </div>
                               </div>
                               <!--/row-->
@@ -393,7 +393,7 @@
                           <!--/item-->
                           <div class="item">
                               <div class="row">
-                                  <div class="col-xs-6"><a href="#x" class="thumbnail"><img src="TRA.jpg" alt="Image" class="img-responsive"></a>
+                                  <div class="col-xs-6"><a href="#" class="thumbnail"><img src="TRA.jpg" alt="Image" class="img-responsive"></a>
                                   </div>
                                   <div class="col-xs-6"><a href="#" class="thumbnail"><img src="LD.jpg" alt="Image" class="img-responsive"></a>
                                   </div>
@@ -403,7 +403,7 @@
                           <!--/item-->
                           <div class="item">
                             <div class="row">
-                              <div class="col-xs-12"><a href="#x" class="thumbnail"><img src="sc.jpg" alt="Image" class="img-responsive"></a>
+                              <div class="col-xs-12"><a href="#" class="thumbnail"><img src="sc.jpg" alt="Image" class="img-responsive"></a>
                               </div>
                             </div>
                             <!--/row-->
