--- a/index.html
+++ b/index.html
@@ -557,8 +557,8 @@
                         <h5>MOVILIDAD ESTUDIANTIL</h5>
                         <h2>Experiencia internacional</h2>
                         <p>En un mundo donde la preparación y las experiencias personales han adquirido relevancia para insertarse en un mundo laboral cada vez más global, es importante participar en actividades, programas y vivencias internacionales que ayuden a desarrollar</p>
-                            <a type="button" href="https://www.pucmm.edu.do/movilidad-estudiantil/sobre/oficina-estudiantes-internacionales" class="btn pucmm-btn-primary" style="margin-bottom: 15px;">Conoce más</a>
-                            <a type="button" href="https://www.pucmm.edu.do/movilidad-estudiantil/estudiantes-pucmm/programas" class="btn pucmm-btn-warning" style="margin-bottom: 15px;">Ver programa</a>
+                            <a type="button" href="https://www.pucmm.edu.do/movilidad-estudiantil/sobre/oficina-estudiantes-internacionales" class="btn pucmm-btn-warning" style="margin-bottom: 15px;">Conoce más</a>
+                            <a type="button" href="https://www.pucmm.edu.do/movilidad-estudiantil/estudiantes-pucmm/programas" class="btn pucmm-btn-primary" style="margin-bottom: 15px;">Ver programa</a>
                     </div>
                     <div class="col-md-6">
                         <img class="img-responsive" src="chica-internacional.png" alt="">
