--- a/index.html
+++ b/index.html
@@ -412,11 +412,11 @@
                       </div>
                       <!--/carousel-inner--> 
                       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="glyphicon glyphicon-chevron-left flecha"></span>
                         <span class="sr-only">Previous</span>
                       </a>      
                       <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="glyphicon glyphicon-chevron-right flecha"></span>
                         <span class="sr-only">Next</span>
                       </a>
                   </div>
@@ -438,12 +438,12 @@
       <div class='col-md-12'>
         <div class="carousel slide" data-ride="carousel" id="quote-carousel">
           <!-- Bottom Carousel Indicators -->
-          <ol class="carousel-indicators">
+          <!-- <ol class="carousel-indicators">
             <li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
             <li data-target="#quote-carousel" data-slide-to="1"></li>
             <li data-target="#quote-carousel" data-slide-to="2"></li>
             <li data-target="#quote-carousel" data-slide-to="3"></li>
-          </ol>
+          </ol> -->
           
           <div class="carousel-inner colheight">          
             <!-- Quote 1 -->
@@ -535,6 +535,12 @@
                   </div>
                 </div>
             </div>
+            <ol class="carousel-indicators">
+              <li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
+              <li data-target="#quote-carousel" data-slide-to="1"></li>
+              <li data-target="#quote-carousel" data-slide-to="2"></li>
+              <li data-target="#quote-carousel" data-slide-to="3"></li>
+            </ol>
           </div>
           
           <!-- Carousel Buttons Next/Prev -->
@@ -557,8 +563,8 @@
                         <h5>MOVILIDAD ESTUDIANTIL</h5>
                         <h2>Experiencia internacional</h2>
                         <p>En un mundo donde la preparación y las experiencias personales han adquirido relevancia para insertarse en un mundo laboral cada vez más global, es importante participar en actividades, programas y vivencias internacionales que ayuden a desarrollar</p>
-                            <a type="button" href="https://www.pucmm.edu.do/movilidad-estudiantil/sobre/oficina-estudiantes-internacionales" class="btn pucmm-btn-warning" style="margin-bottom: 15px;">Conoce más</a>
-                            <a type="button" href="https://www.pucmm.edu.do/movilidad-estudiantil/estudiantes-pucmm/programas" class="btn pucmm-btn-primary" style="margin-bottom: 15px;">Ver programa</a>
+                            <a type="button" href="https://www.pucmm.edu.do/movilidad-estudiantil/sobre/oficina-estudiantes-internacionales" class="btn pucmm-btn-warning text-uppercase" style="margin-bottom: 15px;">Conoce más</a>
+                            <a type="button" href="https://www.pucmm.edu.do/movilidad-estudiantil/estudiantes-pucmm/programas" class="btn pucmm-btn-primary text-uppercase" style="margin-bottom: 15px;">Ver programa</a>
                     </div>
                     <div class="col-md-6">
                         <img class="img-responsive" src="chica-internacional.png" alt="">
