--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="row">
                     <div class="col-md-6 col-md-offset-6">
                         <div class="title-esc">
-                            <h3>Licenciaturas en</h3>
-                            <h1>Comunicación Social</h1>
+                            <h3 style="margin-bottom: 0;">Licenciaturas en</h3>
+                            <h1 style="margin-top: 0;">Comunicación Social</h1>
                             <p>Al comunicarnos proyectamos quienes somos y que queremos ser.<br>¡Vive la experiencia!</p>
                             <a type="button" href="https://www.pucmm.edu.do/admisiones" class="btn pucmm-btn-warning text-uppercase">Admisiones</a>
                             <a type="button" href="https://www.pucmm.edu.do/admisiones/aplicar-grado" class="btn pucmm-btn-white text-uppercase">Aplicar</a>
@@ -343,12 +343,12 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="row vertical-align">
-                    <div class="col-md-6">
+                    <div class="col-md-5">
                         <div class="embed-responsive embed-responsive-16by9"  style="margin-bottom: 15px; z-index: 1;">
                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/H0LVMgCn2ws"></iframe>
                       </div>
                     </div>
-                    <div class="col-md-6 back-mov">
+                    <div class="col-md-7 back-mov">
                         <script type="text/javascript" defer src="https://form.123formbuilder.com/embed/5852748.js" data-role="form"
                         data-default-width="650px"></script>
                     </div>
@@ -361,12 +361,9 @@
 
 <!-- pasantia carousel -->
 <section class="pasantia">
-  <div class="container-fluid">    
-    <div class="row">
-      <div class="col-md-12">
-        <div class="container">
-          <div class="col-xs-12">
-            <h2 class="text-center">Pasantía</h2>      
+        <div class="container-fluid">
+          <div class="col-md-12">
+            <h2 class="text-center" style="padding-bottom: 25px;">Pasantía</h2>      
               <!-- <div> -->
                   <div id="myCarousel" class="carousel slide">                
                       <!-- Carousel items -->
@@ -424,31 +421,27 @@
               <!-- </div> -->
               <!--/well-->
           </div>
-      </div>
-      </div>
-    </div>
-  </div>
+\
 </section>
 <!-- fin pasantia carousel -->
 
 <!-- egresados carousel -->
 <section>
   <div class="container-fluid pcajas carousel-bg">
-    <div class='row'>
-      <div class='col-md-12'>
+    <div class="row">
+      <div class="col-md-12">
         <div class="carousel slide" data-ride="carousel" id="quote-carousel">
           <!-- Bottom Carousel Indicators -->
-          <!-- <ol class="carousel-indicators">
+          <ol class="carousel-indicators">
             <li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
             <li data-target="#quote-carousel" data-slide-to="1"></li>
             <li data-target="#quote-carousel" data-slide-to="2"></li>
             <li data-target="#quote-carousel" data-slide-to="3"></li>
-          </ol> -->
-          
+          </ol>          
           <div class="carousel-inner colheight">          
             <!-- Quote 1 -->
             <div class="item active">
-                <div class="row">
+                <div class="row vertical-align">
                   <div class="col-sm-5 img-align">
                     <img class="img-circle img-egresado" src="Julietta-Rodriguez.jpg">
                   </div>
@@ -469,8 +462,7 @@
             </div>
             <!-- Quote 2 -->
             <div class="item">
-                <div class="row">
-                  <div class="col-md-12">
+                <div class="row vertical-align">
                         <div class="col-sm-5 img-align">
                           <img class="img-circle img-egresado" src="Laura-Perez-Rojas.jpg">
                         </div>
@@ -488,12 +480,11 @@
                               por el canal 7.
                             </small></p>
                         </div>
-                  </div>
                 </div>
             </div>
             <!-- Quote 3 -->
             <div class="item">
-                <div class="row">
+                <div class="row vertical-align">
                   <div class="col-sm-5 img-align">
                     <img class="img-circle img-egresado" src="Kharla-Polonio.jpg" >
                   </div>
@@ -501,8 +492,7 @@
                     <h2>Hablan nuestros egresados</h2>
                     <p>"La mejor comunicación es la que se ejerce con pasión y respeto. Desde cualquier ámbito laboral,
                       quien se dedica a este oficio, debe apostar por hacerlo de manera responsable, aportando a la
-                      sociedad
-                      y su democratización".</p>
+                      sociedad y su democratización".</p>
                     <p><span>Kharla Polonio. Especialista en Comunicación Audiovisual</span><br>
                       <small><strong>Perfil profesional:</strong><br>Es coordinadora y presentadora de Informativos
                         Teleantillas, desarrolla sus habilidades corporativas en el ámbito digital, maestría de ceremonias
@@ -513,7 +503,7 @@
             </div>
             <!-- Quote 4 -->
             <div class="item">
-                <div class="row">
+                <div class="row vertical-align">
                   <div class="col-sm-5 img-align">
                     <img class="img-circle img-egresado" src="Luis-Jose-Lopez-Luijo.jpg" >
                   </div>
@@ -523,10 +513,8 @@
                       organizaciones.
                       Saber establecer y mantener relaciones positivas con las diferentes audiencias: públicos internos,
                       inversionistas, clientes y proveedores, reguladores... Cuando se establece una comunicación
-                      coherente,
-                      se genera confianza que posibilita el éxito del negocio. Cuando la comunicación corporativa falla,
-                      se
-                      pone en riesgo futuro del negocio".</p>
+                      coherente, se genera confianza que posibilita el éxito del negocio. Cuando la comunicación corporativa falla,
+                      se pone en riesgo futuro del negocio".</p>
                     <p><span>Luis José López Luijo. Especialista en Comunicación Corporativa</span><br>
                       <small><strong>Perfil profesional:</strong><br>Labora en Aeropuertos Dominicanos Siglo XXI
                         (AERODOM). Realiza su función como director de Comunicación Corporativa y Responsabilidad Social
@@ -535,12 +523,6 @@
                   </div>
                 </div>
             </div>
-            <ol class="carousel-indicators">
-              <li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
-              <li data-target="#quote-carousel" data-slide-to="1"></li>
-              <li data-target="#quote-carousel" data-slide-to="2"></li>
-              <li data-target="#quote-carousel" data-slide-to="3"></li>
-            </ol>
           </div>
           
           <!-- Carousel Buttons Next/Prev -->
