--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <li class="list-group-item"><a href="https://www.pucmm.edu.do/ingenierias">Ciencias e ingeniería »</a></li>
                             <li class="list-group-item"><a href="https://www.pucmm.edu.do/salud">Ciencias de la salud »</a></li>
                         </ul>
-                        <hr>
+                        <hr class="hr-menu">
                     </div>
                     <div class="col-md-8">
                         <div>
@@ -341,14 +341,14 @@
 <section class="pcajas video-form">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 back-mov">
                 <div class="row vertical-align">
                     <div class="col-md-5">
                         <div class="embed-responsive embed-responsive-16by9"  style="margin-bottom: 15px; z-index: 1;">
                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/H0LVMgCn2ws"></iframe>
                       </div>
                     </div>
-                    <div class="col-md-7 back-mov">
+                    <div class="col-md-7">
                         <script type="text/javascript" defer src="https://form.123formbuilder.com/embed/5852748.js" data-role="form"
                         data-default-width="650px"></script>
                     </div>
@@ -486,7 +486,7 @@
             <div class="item">
                 <div class="row vertical-align">
                   <div class="col-sm-5 img-align">
-                    <img class="img-circle img-egresado" src="Kharla-Polonio.jpg" >
+                    <img class="img-circle img-egresado" src="Kharla-Polonio.jpg">
                   </div>
                   <div class="col-sm-7 carousel-texto">
                     <h2>Hablan nuestros egresados</h2>
@@ -505,7 +505,7 @@
             <div class="item">
                 <div class="row vertical-align">
                   <div class="col-sm-5 img-align">
-                    <img class="img-circle img-egresado" src="Luis-Jose-Lopez-Luijo.jpg" >
+                    <img class="img-circle img-egresado" src="Luis-Jose-Lopez-Luijo.jpg">
                   </div>
                   <div class="col-sm-7 carousel-texto">
                     <h2>Hablan nuestros egresados</h2>
@@ -523,8 +523,7 @@
                   </div>
                 </div>
             </div>
-          </div>
-          
+          </div>          
           <!-- Carousel Buttons Next/Prev -->
           <a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
           <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
@@ -543,7 +542,7 @@
                 <div class="row vertical-align">
                     <div class="col-md-6 ">
                         <h5>MOVILIDAD ESTUDIANTIL</h5>
-                        <h2>Experiencia internacional</h2>
+                        <h2 style="margin-top: 0;">Experiencia internacional</h2>
                         <p>En un mundo donde la preparación y las experiencias personales han adquirido relevancia para insertarse en un mundo laboral cada vez más global, es importante participar en actividades, programas y vivencias internacionales que ayuden a desarrollar</p>
                             <a type="button" href="https://www.pucmm.edu.do/movilidad-estudiantil/sobre/oficina-estudiantes-internacionales" class="btn pucmm-btn-warning text-uppercase" style="margin-bottom: 15px;">Conoce más</a>
                             <a type="button" href="https://www.pucmm.edu.do/movilidad-estudiantil/estudiantes-pucmm/programas" class="btn pucmm-btn-primary text-uppercase" style="margin-bottom: 15px;">Ver programa</a>
